--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tshirt Mockup</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   </head>
